feat: Comment on PR when violations are found (#16)
Closes #14

--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@ inputs:
     description: number of times to attempt fetching the commit status
     required: false
     default: 10
+  github_token:
+    description: GitHub token
+    default: ${{ github.token }}
+    required: true
 
 outputs:
   project:
@@ -28,6 +32,8 @@ outputs:
 runs:
   using: composite
   steps:
+    - uses: jwalton/gh-find-current-pr@v1
+      id: find_pr
     - id: main
       run: ${{ github.action_path }}/main.sh
       shell: bash
@@ -36,3 +42,23 @@ runs:
         SERVER_URL: ${{ inputs.server_url }}
         RETRY_COUNT: ${{ inputs.retry_count }}
         COMMIT_SHA: ${{ github.sha }}
+    # Add a comment reporting the number of violations.
+    - if: ${{ failure() }}
+      uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        header: axe-watcher
+        message: |
+          axe Watcher found **${{ steps.main.outputs.issue_count }}** accessibility violations in this PR.
+
+          See the full report on [axe DevHub](${{ steps.main.outputs.axe_url }}).
+        GITHUB_TOKEN: ${{ inputs.github_token }}
+        number: ${{ steps.find_pr.outputs.pr }}
+    # Hide a previously added comment if there are no violations.
+    - if: ${{ success() }}
+      uses: marocchino/sticky-pull-request-comment@v2
+      with:
+        header: axe-watcher
+        hide: true
+        hide_classify: OUTDATED
+        GITHUB_TOKEN: ${{ inputs.github_token }}
+        number: ${{ steps.find_pr.outputs.pr }}
