--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,13 +19,11 @@ jobs:
       - uses: nanasess/setup-chromedriver@v1
       - run: cd example && npm run build
       - name: Run tests
-        uses: GabrielBB/xvfb-action@v1
+        run: xvfb-run --auto-servernum npm run ci
+        working-directory: ./example
         env:
           API_KEY: ${{ secrets.AXE_WATCHER_API_KEY }}
           SERVER_URL: https://axe.dequelabs.com
-        with:
-          run: npm run ci
-          working-directory: ./example
   watcher:
     runs-on: ubuntu-latest
     needs: cypress
