--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,3 +38,4 @@ jobs:
       - uses: ./
         with:
           api_key: ${{ secrets.AXE_WATCHER_API_KEY }}
+          enable_a11y_threshold: "true"
