--- a/action.yml
+++ b/action.yml
@@ -38,6 +38,15 @@ outputs:
   new_issues:
     description: Number of new issues found
     value: ${{ steps.main.outputs.new_issues }}
+  resolved_issues:
+    description: Number of resolved issues found
+    value: ${{ steps.main.outputs.resolved_issues }}
+  page_states:
+    description: Number of page states found
+    value: ${{ steps.main.outputs.page_states }}
+  difference_in_page_states:
+    description: Number of page states changed
+    value: ${{ steps.main.outputs.difference_in_page_states }}
 
 runs:
   using: composite
@@ -59,8 +68,13 @@ runs:
       with:
         header: axe-devhub
         message: |
-          axe DevHub found **${{ steps.main.outputs.issue_count }}** accessibility violations in this PR.
-          axe DevHub found **${{ steps.main.outputs.issues_over_a11y_threshold }}** accessibility violations over your a11y threshold in this PR.
+          axe DevHub found in this PR:
+            - **${{ steps.main.outputs.issue_count }}** accessibility violations.
+            - **${{ steps.main.outputs.issues_over_a11y_threshold }}** accessibility violations over your a11y threshold.
+            - **${{ steps.main.outputs.new_issues }}** new accessibility issues.
+            - **${{ steps.main.outputs.resolved_issues }}** resolved accessibility issues.
+            - **${{ steps.main.outputs.page_states }}** page states.
+            - **${{ steps.main.outputs.difference_in_page_states }}** page states changed.
 
           See the full report on [axe DevHub](${{ steps.main.outputs.axe_url }}).
         GITHUB_TOKEN: ${{ inputs.github_token }}
